fix webhint error

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="nav-wrapper">
         <p class="text-primary-400">My Logo</p>
-        <button type="button nav-btn" aria-controls="nav-list" aria-expanded="false" class="mobile-nav-toggle">
+        <button type="button" aria-controls="nav-list" aria-expanded="false" class="mobile-nav-toggle">
           <span class="sr-only">Menu</span>
         </button>
         <nav class="fs-nav">
