--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               A daily selection of privately personalized reads; no accounts
               or sign-ups required.
             </p>
-            <div class="project__stacks">
+            <ul class="project__stacks">
               <li class="project__stacks-li | text-primary-300 fs-200">
                 HTML
               </li>
@@ -108,7 +108,7 @@
               <li class="project__stacks-li | text-primary-300 fs-200">
                 JavaScript
               </li>
-            </div>
+            </ul>
             <button class="button | fs-button" type="button">
               See Project
             </button>
@@ -135,7 +135,7 @@
               to an existing story over the course of a day without spamming
               their friends.
             </p>
-            <div class="project__stacks">
+            <ul class="project__stacks">
               <li class="project__stacks-li | text-primary-300 fs-200">
                 HTML
               </li>
@@ -148,7 +148,7 @@
               <li class="project__stacks-li | text-primary-300 fs-200">
                 PHP
               </li>
-            </div>
+            </ul>
             <button class="button | fs-button" type="button">
               See Project
             </button>
@@ -175,7 +175,7 @@
               Reality app; a place to discover and enjoy 360 photos and videos
               on Gear VR.
             </p>
-            <div class="project__stacks">
+            <ul class="project__stacks">
               <li class="project__stacks-li | text-primary-300 fs-200">
                 HTML
               </li>
@@ -188,7 +188,7 @@
               <li class="project__stacks-li | text-primary-300 fs-200">
                 PHP
               </li>
-            </div>
+            </ul>
             <button class="button | fs-button" type="button">
               See Project
             </button>
@@ -214,7 +214,7 @@
               A smart assistant to make driving more safe, efficient, and fun
               by unlocking your most expensive computer: your car.
             </p>
-            <div class="project__stacks">
+            <ul class="project__stacks">
               <li class="project__stacks-li | text-primary-300 fs-200">
                 HTML
               </li>
@@ -227,7 +227,7 @@
               <li class="project__stacks-li | text-primary-300 fs-200">
                 PHP
               </li>
-            </div>
+            </ul>
             <button class="button | fs-button" type="button">
               See Project
             </button>
