--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <input class="contact__form--input" name="email" type="email" placeholder="loremipsum@gmail.com" required>
             <textarea class="contact__form--textarea" name="message" cols="40" rows="8" maxlength="500"
               placeholder="Write your message here..." required></textarea>
-            <button class="contact__form--button | capitalize" type="button">get in touch</button>
+            <button class="contact__form--button | capitalize" type="submit">get in touch</button>
           </form>
         </div>
       </div>
