finish desktop and add animation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="header">
     <div class="container">
       <div class="nav-wrapper">
-        <p class="text-primary-400">My Logo</p>
+        <div class="nav-logo | text-primary-400">My Logo</div>
         <button class="mobile-nav-toggle" type="button" aria-controls="nav-list" aria-expanded="false">
           <span class="sr-only">Menu</span>
         </button>
@@ -303,9 +303,7 @@
                 </button>
               </div>
               <div class="accordion__content">
-                <!-- <ul class="accordion__ul text-neutral-700">
-                  <li class="accordion__li">Nothing to show</li>
-                </ul> -->
+
               </div>
             </div>
             <div class="accordion">
@@ -316,9 +314,7 @@
                 </button>
               </div>
               <div class="accordion__content">
-                <!-- <ul class="accordion__ul text-neutral-700">
-                  <li class="accordion__li">Nothing to show</li>
-                </ul> -->
+
               </div>
             </div>
           </div>
@@ -346,7 +342,7 @@
             <input class="contact__form--input" name="name" type="text" placeholder="Lorem Ipsum" maxlength="30">
             <input class="contact__form--input" name="email" type="email" placeholder="loremipsum@gmail.com" required>
             <textarea class="contact__form--textarea" name="message" cols="40" rows="8" maxlength="500"
-              placeholder="Write your message here..." required></textarea>
+                      placeholder="Write your message here..." required></textarea>
             <button class="contact__form--button | capitalize" type="submit">get in touch</button>
           </form>
         </div>
