add small changes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             like what you see and have a project you need coded, don’t
             hesitate to contact me.
           </p>
-          <p class="text-primary-300 uppercase">Let's Connect</p>
+          <p class="text-primary-400 uppercase">Let's Connect</p>
           <div class="social-icons">
             <a href="">
               <img class="social-icons-img" src="./images/twitter.svg" alt="twitter">
@@ -99,13 +99,13 @@
               or sign-ups required.
             </p>
             <ul class="project__stacks">
-              <li class="project__stacks-li | text-primary-300 fs-200">
+              <li class="project__stacks-li | fs-200">
                 HTML
               </li>
-              <li class="project__stacks-li | text-primary-300 fs-200">
+              <li class="project__stacks-li | fs-200">
                 CSS
               </li>
-              <li class="project__stacks-li | text-primary-300 fs-200">
+              <li class="project__stacks-li | fs-200">
                 JavaScript
               </li>
             </ul>
@@ -136,16 +136,16 @@
               their friends.
             </p>
             <ul class="project__stacks">
-              <li class="project__stacks-li | text-primary-300 fs-200">
+              <li class="project__stacks-li | fs-200">
                 HTML
               </li>
-              <li class="project__stacks-li | text-primary-300 fs-200">
+              <li class="project__stacks-li | fs-200">
                 CSS
               </li>
-              <li class="project__stacks-li | text-primary-300 fs-200">
+              <li class="project__stacks-li | fs-200">
                 JavaScript
               </li>
-              <li class="project__stacks-li | text-primary-300 fs-200">
+              <li class="project__stacks-li | fs-200">
                 PHP
               </li>
             </ul>
@@ -176,16 +176,16 @@
               on Gear VR.
             </p>
             <ul class="project__stacks">
-              <li class="project__stacks-li | text-primary-300 fs-200">
+              <li class="project__stacks-li | fs-200">
                 HTML
               </li>
-              <li class="project__stacks-li | text-primary-300 fs-200">
+              <li class="project__stacks-li | fs-200">
                 CSS
               </li>
-              <li class="project__stacks-li | text-primary-300 fs-200">
+              <li class="project__stacks-li | fs-200">
                 JavaScript
               </li>
-              <li class="project__stacks-li | text-primary-300 fs-200">
+              <li class="project__stacks-li | fs-200">
                 PHP
               </li>
             </ul>
@@ -215,16 +215,16 @@
               by unlocking your most expensive computer: your car.
             </p>
             <ul class="project__stacks">
-              <li class="project__stacks-li | text-primary-300 fs-200">
+              <li class="project__stacks-li | fs-200">
                 HTML
               </li>
-              <li class="project__stacks-li | text-primary-300 fs-200">
+              <li class="project__stacks-li | fs-200">
                 CSS
               </li>
-              <li class="project__stacks-li | text-primary-300 fs-200">
+              <li class="project__stacks-li | fs-200">
                 JavaScript
               </li>
-              <li class="project__stacks-li | text-primary-300 fs-200">
+              <li class="project__stacks-li | fs-200">
                 PHP
               </li>
             </ul>
@@ -248,7 +248,7 @@
               If you like what you see and have a project you need coded,
               don’t hesitate to contact me.
             </p>
-            <p class="uppercase text-primary-300">let's connect</p>
+            <p class="uppercase text-primary-400">let's connect</p>
             <div class="social-icons">
               <a href="">
                 <img class="social-icons-img" src="./images/twitter.svg" alt="twitter">
@@ -279,7 +279,7 @@
                 </button>
               </div>
               <div class="accordion__content">
-                <ul class="accordion__ul text-neutral-700">
+                <ul class="accordion__ul">
                   <li class="accordion__li">
                     <img src="images/javascript.svg" alt>
                     <p>JavaScript</p>
@@ -314,7 +314,6 @@
                 </button>
               </div>
               <div class="accordion__content">
-
               </div>
             </div>
           </div>
@@ -333,7 +332,7 @@
       <div class="container">
         <div class="contact-wrapper">
           <h2 class="capitalize fs-800 fw-bold text-neutral-100">contact me</h2>
-          <p class="fs-550 text-primary-50">
+          <p class="fs-550 text-footer-paragraph">
             If you have an application you are interested in developing, a
             feature that you need built or a project that needs coding. I’d
             love to help with it!
@@ -349,6 +348,8 @@
       </div>
     </section>
   </footer>
+
+
 </body>
 
 </html>
