--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
         </nav>
       </div>
       <div class="hero-wrapper">
-        <img class="svg-hero rectangle4" src="images/Rectangle 4.svg">
-        <img class="svg-hero ellipse3" src="images/Ellipse 3.svg">
-        <img class="svg-hero rectangle7" src="images/Rectangle 7.svg">
-        <img class="svg-hero ellipse5" src="images/Ellipse 5.svg">
-        <img class="svg-hero rectangle6" src="images/Rectangle 6.svg">
-        <img class="svg-hero ellipse11" src="images/Ellipse11.svg">
-        <img class="svg-hero ellipse12" src="images/Ellipse 12.svg">
-        <img class="svg-hero ellipse13" src="images/Ellipse 13.svg">
-        <img class="svg-hero ellipse4" src="images/Ellipse 4.svg">
-        <img class="svg-hero rectangle5" src="images/Rectangle 5.svg">
+        <img class="svg-hero rectangle4" src="images/Rectangle 4.svg" alt="Rectangle 4.svg">
+        <img class="svg-hero ellipse3" src="images/Ellipse 3.svg" alt="Ellipse 3.svg">
+        <img class="svg-hero rectangle7" src="images/Rectangle 7.svg" alt="Rectangle 7.svg">
+        <img class="svg-hero ellipse5" src="images/Ellipse 5.svg" alt="Ellipse 5.svg">
+        <img class="svg-hero rectangle6" src="images/Rectangle 6.svg" alt="Rectangle 6.svg">
+        <img class="svg-hero ellipse11" src="images/Ellipse11.svg" alt="Ellipse11.svg">
+        <img class="svg-hero ellipse12" src="images/Ellipse 12.svg" alt="Ellipse 12.svg">
+        <img class="svg-hero ellipse13" src="images/Ellipse 13.svg" alt="Ellipse 13.svg">
+        <img class="svg-hero ellipse4" src="images/Ellipse 4.svg" alt="Ellipse 4.svg">
+        <img class="svg-hero rectangle5" src="images/Rectangle 5.svg" alt="Rectangle 5.svg">
         <section class="header-hero">
           <h1 class="line-height-primary-heading fs-primary-heading fw-bold text-neutral-800">
             I’m NyiYeZin. <br>
@@ -80,7 +80,7 @@
       <div class="sections-wrapper">
         <!-- Project1 -->
         <section class="project">
-          <img class="project__img" src="images/portfolio-snapshot-mobile.png" alt>
+          <img class="project__img" src="images/portfolio-snapshot-mobile.png" alt="portfolio-snapshot-mobile.png">
           <div class="project__info">
             <div class="project__header">
               <h2 class="fs-secondary-heading fw-bold text-neutral-800">
@@ -116,7 +116,7 @@
         </section>
         <!-- Project2 -->
         <section class="project">
-          <img class="project__img" src="images/portfolio-snapshot-mobile-2.png" alt>
+          <img class="project__img" src="images/portfolio-snapshot-mobile-2.png" alt="portfolio-snapshot-mobile-2.png">
           <div class="project__info">
             <div class="project__header">
               <h2 class="fs-secondary-heading fw-bold text-neutral-800">
@@ -156,7 +156,7 @@
         </section>
         <!-- Project3 -->
         <section class="project">
-          <img class="project__img" src="images/portfolio-snapshot-mobile-3.png" alt>
+          <img class="project__img" src="images/portfolio-snapshot-mobile-3.png" alt="portfolio-snapshot-mobile-3.png">
           <div class="project__info">
             <div class="project__header">
               <h2 class="fs-secondary-heading fw-bold text-neutral-800">
@@ -196,7 +196,7 @@
         </section>
         <!-- Project4 -->
         <section class="project">
-          <img class="project__img" src="images/portfolio-snapshot-mobile-4.png" alt>
+          <img class="project__img" src="images/portfolio-snapshot-mobile-4.png" alt="portfolio-snapshot-mobile-4.png">
           <div class="project__info">
             <div class="project__header">
               <h2 class="fs-secondary-heading fw-bold text-neutral-800">
@@ -281,15 +281,15 @@
               <div class="accordion__content">
                 <ul class="accordion__ul text-neutral-700">
                   <li class="accordion__li">
-                    <img src="images/javascript.svg" alt>
+                    <img src="images/javascript.svg" alt="javascript.svg">
                     <p>JavaScript</p>
                   </li>
                   <li class="accordion__li">
-                    <img src="images/html.svg" alt>
+                    <img src="images/html.svg" alt="html.svg">
                     <p>HTML</p>
                   </li>
                   <li class="accordion__li">
-                    <img src="images/css.svg" alt>
+                    <img src="images/css.svg" alt="css.svg">
                     <p>CSS</p>
                   </li>
                 </ul>
@@ -322,14 +322,14 @@
       </div>
     </section>
     <section id="contact" class="contact">
-      <img class="svg-contact rectangle4" src="./images/Rectangle 4contact.svg" alt>
-      <img class="svg-contact ellipse3" src="./images/Ellipse 3contact.svg" alt>
-      <img class="svg-contact ellipse12" src="./images/Ellipse 12contact.svg" alt>
-      <img class="svg-contact rectangle7" src="./images/Rectangle 7contact.svg" alt>
-      <img class="svg-contact ellipse5" src="./images/Ellipse 5contact.svg" alt>
-      <img class="svg-contact rectangle6" src="./images/Rectangle 6contact.svg" alt>
-      <img class="svg-contact ellipse11" src="./images/Ellipse 11contact.svg" alt>
-      <img class="svg-contact ellipse13" src="./images/Ellipse 13contact.svg" alt>
+      <img  class="svg-contact rectangle4" src="./images/Rectangle 4contact.svg" alt="4contact.svg">
+      <img class="svg-contact ellipse3" src="./images/Ellipse 3contact.svg" alt="3contact.svg">
+      <img class="svg-contact ellipse12" src="./images/Ellipse 12contact.svg" alt="12contact.svg">
+      <img class="svg-contact rectangle7" src="./images/Rectangle 7contact.svg" alt="7contact.svg">
+      <img class="svg-contact ellipse5" src="./images/Ellipse 5contact.svg" alt="5contact.svg">
+      <img class="svg-contact rectangle6" src="./images/Rectangle 6contact.svg" alt="6contact.svg">
+      <img class="svg-contact ellipse11" src="./images/Ellipse 11contact.svg" alt="11contact.svg">
+      <img class="svg-contact ellipse13" src="./images/Ellipse 13contact.svg" alt="13contact.svg">
       <div class="container">
         <div class="contact-wrapper">
           <h2 class="capitalize fs-800 fw-bold text-neutral-100">contact me</h2>
