finish mobile-menu

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="container">
       <div class="nav-wrapper">
         <div class="nav-logo | text-primary-400">My Logo</div>
-        <button class="mobile-nav-toggle" type="button" aria-controls="nav-list" aria-expanded="false">
+        <button class="mobile-nav-toggle" type="button" aria-controls="nav-list"
+          aria-expanded="false">
           <span class="sr-only">Menu</span>
         </button>
         <nav class="fs-nav">
@@ -338,18 +339,19 @@
             love to help with it!
           </p>
           <form class="contact__form" action="https://formspree.io/f/mqkvglvj" method="POST">
-            <input class="contact__form--input" name="name" type="text" placeholder="Lorem Ipsum" maxlength="30">
-            <input class="contact__form--input" name="email" type="email" placeholder="loremipsum@gmail.com" required>
-            <textarea class="contact__form--textarea" name="message" cols="40" rows="8" maxlength="500"
-                      placeholder="Write your message here..." required></textarea>
+            <input class="contact__form--input" name="name" type="text" placeholder="Lorem Ipsum"
+              maxlength="30">
+            <input class="contact__form--input" name="email" type="email"
+              placeholder="loremipsum@gmail.com" required>
+            <textarea class="contact__form--textarea" name="message" cols="40" rows="8"
+              maxlength="500"
+              placeholder="Write your message here..." required></textarea>
             <button class="contact__form--button | capitalize" type="submit">get in touch</button>
           </form>
         </div>
       </div>
     </section>
   </footer>
-
-
 </body>
 
 </html>
