--- a/index.html
+++ b/index.html
@@ -76,165 +76,108 @@
       </div>
     </div>
   </header>
-  <main id="portfolio" class="main">
+  <main class="main">
     <div class="container">
-      <div class="sections-wrapper">
-        <!-- Project1 -->
-        <section class="project">
-          <img class="project__img" src="images/portfolio-snapshot-mobile.png">
-          <div class="project__info">
-            <div class="project__header">
-              <h2 class="fs-secondary-heading fw-bold text-neutral-800">
-                Tonic
-              </h2>
-              <div class="project__sub-header | fs-sub-paragraph-title fw-semibold">
-                <p class="uppercase text-neutral-600">canopy</p>
-                <ul class="project__position-year | text-neutral-300">
-                  <li class="capitalize">backend dev</li>
-                  <li class="capitalize">2015</li>
+      <div id="projectsContainer" class="sections-wrapper">
+        <div id="modalContainer" class="modal-wrapper"></div>
+        <div id="modalOverlay" class="modal-overlay"></div>
+
+        <template id="projectTemplate">
+          <section class="project">
+            <img id="projectImg" class="project__img" src="">
+            <div class="project__info">
+              <div class="project__header">
+                <h2 id="projectTitle" class="fs-secondary-heading fw-bold text-neutral-800"></h2>
+                <ul
+                  id="projectMeta"
+                  class="project__meta | text-neutral-300 capitalize fs-sub-paragraph-title fw-semibold">
                 </ul>
               </div>
+              <p id="projectDesc" class="fs-sub-paragraph-content text-neutral-600"></p>
+              <ul id="projectStacks" class="tech-stacks"></ul>
+              <button type="button" id="openModal" class="default-button | fs-button">
+                See Project
+              </button>
             </div>
-            <p class="fs-sub-paragraph-content text-neutral-600">
-              A daily selection of privately personalized reads; no accounts
-              or sign-ups required.
-            </p>
-            <ul class="project__stacks">
-              <li class="project__stacks-li | fs-200">
-                HTML
-              </li>
-              <li class="project__stacks-li | fs-200">
-                CSS
-              </li>
-              <li class="project__stacks-li | fs-200">
-                JavaScript
-              </li>
-            </ul>
-            <button class="button | fs-button" type="button">
-              See Project
-            </button>
-          </div>
-        </section>
-        <!-- Project2 -->
-        <section class="project">
-          <img class="project__img" src="images/portfolio-snapshot-mobile-2.png">
-          <div class="project__info">
-            <div class="project__header">
-              <h2 class="fs-secondary-heading fw-bold text-neutral-800">
-                Multi-Post Stories
-              </h2>
-              <div class="project__sub-header | fs-sub-paragraph-title fw-semibold">
-                <p class="uppercase text-neutral-600">facebook</p>
-                <ul class="project__position-year | text-neutral-300">
-                  <li class="capitalize">full stack dev</li>
-                  <li class="capitalize">2015</li>
+          </section>
+        </template>
+
+        <template id="modalTemplate">
+          <div class="container" style="--padding: 1rem">
+            <div class="modal">
+              <header class="modal__header">
+                <h2 id="modalTitle" class="fs-secondary-heading fw-bold text-neutral-800"></h2>
+                <ul
+                  id="modalMeta"
+                  class="modal__meta | text-neutral-300 capitalize text-neutral-600">
                 </ul>
-              </div>
+                <button type="button" id="closeModal" class="modal__button">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                    fill="none">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M5.29289 5.29289C5.68342 4.90237 6.31658 4.90237 6.70711 5.29289L12 10.5858L17.2929 5.29289C17.6834 4.90237 18.3166 4.90237 18.7071 5.29289C19.0976 5.68342 19.0976 6.31658 18.7071 6.70711L13.4142 12L18.7071 17.2929C19.0976 17.6834 19.0976 18.3166 18.7071 18.7071C18.3166 19.0976 17.6834 19.0976 17.2929 18.7071L12 13.4142L6.70711 18.7071C6.31658 19.0976 5.68342 19.0976 5.29289 18.7071C4.90237 18.3166 4.90237 17.6834 5.29289 17.2929L10.5858 12L5.29289 6.70711C4.90237 6.31658 4.90237 5.68342 5.29289 5.29289Z"
+                      fill="#67798E" />
+                  </svg>
+                </button>
+              </header>
+
+              <main class="modal__main">
+                <img id="modalImg" src="" alt="" class="modal__img">
+                <div class="grid-columns">
+                  <div class="modal__info">
+                    <p id="modalDesc"
+                      class="project__desc fs-sub-paragraph-content text-neutral-600">
+                    </p>
+                  </div>
+
+                  <div class="modal__stacks">
+                    <ul id="modalStacks" class="tech-stacks"></ul>
+                    <svg width="100%" height="2" viewBox="0 0 303 2" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 1H303" stroke="#EBECF0" />
+                    </svg>
+                    <ul id="modalLinks" class="modal__links">
+                      <a>
+                        <button class="default-button capitalize">
+                          <p>see live</p>
+
+                          <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                              d="M5 12C5 8.13401 8.13401 5 12 5C12.5523 5 13 4.55228 13 4C13 3.44772 12.5523 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 11.4477 20.5523 11 20 11C19.4477 11 19 11.4477 19 12C19 15.866 15.866 19 12 19C8.13401 19 5 15.866 5 12ZM16 3C15.4477 3 15 3.44772 15 4C15 4.55228 15.4477 5 16 5H17.5858L11.2929 11.2929C10.9024 11.6834 10.9024 12.3166 11.2929 12.7071C11.6834 13.0976 12.3166 13.0976 12.7071 12.7071L19 6.41421V8C19 8.55228 19.4477 9 20 9C20.5523 9 21 8.55228 21 8V4C21 3.44772 20.5523 3 20 3H16Z"
+                              fill="currentColor" />
+                          </svg>
+
+                        </button>
+                      </a>
+                      <a>
+                        <button class="default-button capitalize">
+                          <p>see source</p>
+
+                          <svg width="18" height="20" viewBox="0 0 18 20" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_39_524)">
+                              <path
+                                d="M17.9989 7.46114C17.9989 6.32124 17.6329 5.25043 16.9342 4.31779C17.2004 3.41969 17.2669 2.27979 17.2004 0.967185C17.1671 0.414508 16.7345 0 16.2022 0C15.9028 0 13.3741 0.0345423 11.9101 1.38169C10.6458 1.1399 9.31495 1.1399 8.01736 1.38169C6.58667 0.0345423 4.05802 0 3.7253 0C3.19296 0 2.76042 0.414508 2.72715 0.967185C2.62734 2.27979 2.72715 3.41969 2.99333 4.31779C2.29462 5.28497 1.92863 6.35579 1.92863 7.46114C1.92863 9.8791 3.7253 12.0553 6.45358 13.0915C6.35377 13.2988 6.28723 13.5406 6.22068 13.7824C3.32604 13.4715 1.9619 10.7427 1.89536 10.639C1.66246 10.1209 1.06357 9.91364 0.56449 10.19C0.0654144 10.4318 -0.134216 11.0535 0.131958 11.5717C0.198501 11.7444 2.02845 15.4404 6.05432 15.8549V18.9637C6.05432 19.5509 6.48686 20 7.05248 20H12.875C13.4406 20 13.8732 19.5509 13.8732 18.9637V14.8532C13.8732 14.2314 13.7401 13.6442 13.5072 13.1261C16.2022 12.0553 17.9989 9.91364 17.9989 7.46114Z"
+                                fill="currentColor" />
+                            </g>
+                            <defs>
+                              <clipPath id="clip0_39_524">
+                                <rect width="18" height="20" fill="white" />
+                              </clipPath>
+                            </defs>
+                          </svg>
+                        </button>
+                      </a>
+                    </ul>
+                  </div>
+                </div>
+              </main>
             </div>
-            <p class="fs-sub-paragraph-content text-neutral-600">
-              Experimental content creation feature that allows users to add
-              to an existing story over the course of a day without spamming
-              their friends.
-            </p>
-            <ul class="project__stacks">
-              <li class="project__stacks-li | fs-200">
-                HTML
-              </li>
-              <li class="project__stacks-li | fs-200">
-                CSS
-              </li>
-              <li class="project__stacks-li | fs-200">
-                JavaScript
-              </li>
-              <li class="project__stacks-li | fs-200">
-                PHP
-              </li>
-            </ul>
-            <button class="button | fs-button" type="button">
-              See Project
-            </button>
           </div>
-        </section>
-        <!-- Project3 -->
-        <section class="project">
-          <img class="project__img" src="images/portfolio-snapshot-mobile-3.png">
-          <div class="project__info">
-            <div class="project__header">
-              <h2 class="fs-secondary-heading fw-bold text-neutral-800">
-                Facebook 360
-              </h2>
-              <div class="project__sub-header | fs-sub-paragraph-title fw-semibold">
-                <p class="uppercase text-neutral-600">facebook</p>
-                <ul class="project__position-year | text-neutral-300">
-                  <li class="capitalize">full stack dev</li>
-                  <li class="capitalize">2015</li>
-                </ul>
-              </div>
-            </div>
-            <p class="fs-sub-paragraph-content text-neutral-600">
-              Exploring the future of media in Facebook's first Virtual
-              Reality app; a place to discover and enjoy 360 photos and videos
-              on Gear VR.
-            </p>
-            <ul class="project__stacks">
-              <li class="project__stacks-li | fs-200">
-                HTML
-              </li>
-              <li class="project__stacks-li | fs-200">
-                CSS
-              </li>
-              <li class="project__stacks-li | fs-200">
-                JavaScript
-              </li>
-              <li class="project__stacks-li | fs-200">
-                PHP
-              </li>
-            </ul>
-            <button class="button | fs-button" type="button">
-              See Project
-            </button>
-          </div>
-        </section>
-        <!-- Project4 -->
-        <section class="project">
-          <img class="project__img" src="images/portfolio-snapshot-mobile-4.png">
-          <div class="project__info">
-            <div class="project__header">
-              <h2 class="fs-secondary-heading fw-bold text-neutral-800">
-                Uber Navigation
-              </h2>
-              <div class="project__sub-header | fs-sub-paragraph-title fw-semibold">
-                <p class="uppercase text-neutral-600">uber</p>
-                <ul class="project__position-year | text-neutral-300">
-                  <li class="capitalize">lead developer</li>
-                  <li class="capitalize">2015</li>
-                </ul>
-              </div>
-            </div>
-            <p class="fs-sub-paragraph-content text-neutral-600">
-              A smart assistant to make driving more safe, efficient, and fun
-              by unlocking your most expensive computer: your car.
-            </p>
-            <ul class="project__stacks">
-              <li class="project__stacks-li | fs-200">
-                HTML
-              </li>
-              <li class="project__stacks-li | fs-200">
-                CSS
-              </li>
-              <li class="project__stacks-li | fs-200">
-                JavaScript
-              </li>
-              <li class="project__stacks-li | fs-200">
-                PHP
-              </li>
-            </ul>
-            <button class="button | fs-button" type="button">
-              See Project
-            </button>
-          </div>
-        </section>
+        </template>
       </div>
+    </div>
     </div>
   </main>
   <footer class="footer">
@@ -267,7 +210,7 @@
                 <img class="social-icons-img" src="./images/random.svg" alt="random">
               </a>
             </div>
-            <button class="button | capitalize" type="button">
+            <button class="default-button | capitalize" type="button">
               get my resume
             </button>
           </div>
@@ -346,7 +289,7 @@
             <textarea class="contact__form--textarea" name="message" cols="40" rows="8"
               maxlength="500"
               placeholder="Write your message here..." required></textarea>
-            <button class="contact__form--button | capitalize" type="submit">get in touch</button>
+            <button class="default-button | capitalize" type="submit">get in touch</button>
           </form>
         </div>
       </div>
