fix webhint error

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     </div>
 
     <div class="contact-wrapper">
-      <div class="container" style="--padding: 1rem">
+      <div class="container">
         <section class="contact">
           <h2 class="capitalize fs-800 fw-bold text-neutral-100">contact me</h2>
           <p class="fs-550 text-footer-paragraph">
