finish saving in localStorage

--- a/index.html
+++ b/index.html
@@ -274,11 +274,11 @@
             love to help with it!
           </p>
           <form class="contact__form" action="https://formspree.io/f/mqkvglvj" method="POST">
-            <input class="contact__form--input" name="name" type="text" placeholder="Lorem Ipsum"
+            <input id="formInput" class="form__input" name="name" type="text" placeholder="Lorem Ipsum"
               maxlength="30">
-            <input class="contact__form--input" name="email" type="email"
+            <input id="formInput" class="form__input" name="email" type="email"
               placeholder="loremipsum@gmail.com" required>
-            <textarea class="contact__form--textarea" name="message" cols="40" rows="8"
+            <textarea id="formInput" class="form__textarea" name="message" cols="40" rows="8"
               maxlength="500"
               placeholder="Write your message here..." required></textarea>
             <button class="default-button | capitalize" type="submit">get in touch</button>
